# alertmanager-discord-bridge

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dpbot_merge.yml  pr.yml  publish.yml  security.yml
src/: main.rs
systemd/: alertmanager-discord-bridge  alertmanager-discord-bridge.service
