[package]
name = "alertmanager-discord-bridge"
version = "1.0.0"
authors = ["Sri Ramanujam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.1"
env_logger = "0.9.0"
log = "0.4.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.9", features = ["json"] }
