[package]
name = "alertmanager-discord-bridge"
version = "1.0.0"
authors = ["Sri Ramanujam"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
env_logger = "0.9.3"
log = "0.4.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
